--- a/styles.css
+++ b/styles.css
@@ -33,10 +33,10 @@
 @media screen and (min-width: 640px) {
   .ogn-container {
     flex-direction: row;
+    align-items: stretch;
   }
   .ogn-image {
     width: 25%;
     max-width: 150px;
-    max-height: 150px;
   }
 }
